--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Prism - Bootstrap 4 Open Source Landing Page Template</title>
+    <title>runtimeQ</title>
     <meta name="description" content="Prism is a beautiful Bootstrap 4 template for open-source landing pages."/>
 
     <!--Google font-->
@@ -20,8 +20,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 d-flex flex-row align-items-center justify-content-between">
-                <div class="heading-brand">Node+</div>
-                <a href="https://github.com/khoironi5980/nodemode.eu.org/" class="btn btn-dark" target="_blank">Download</a>
+                <div class="heading-brand">runtimeQ</div>
+                <a href="https://github.com/khoironi5980//" class="btn btn-dark" target="_blank">Download</a>
             </div>
         </div>
         <div class="row mt-6">
