--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
-
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4989652,document.body||document.documentElement)</script>
 <!--Header Section-->
 <section class="bg-gradient pt-5 pb-6">
     <div class="container">
